# coconet-harmonizer

./: .gitignore  README.md  main.py  pyproject.toml
coconet/: __init__.py  data.py  harmonize.py  model.py  train.py
coconet/web/: __init__.py  app.py  routes.py
web-ui/: package-lock.json  package.json
web-ui/src/: App.css  App.tsx
web-ui/src/api/: harmonize.ts
web-ui/src/components/: Controls.tsx  HarmonyDisplay.tsx  PianoInput.tsx
web-ui/src/hooks/: useAudio.ts
web-ui/src/types/: react-piano.d.ts  soundfont-player.d.ts
