[project]
name = "ml-harmonizer"
version = "0.0.1"
description = "4-part harmony generator using Coconet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "torch>=2.9.0",
    "music21>=9.1.0",
    "pretty-midi>=0.2.10",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]
